fix arrows overflow

--- a/src/assets/css/layouts/sections/_hero.scss
+++ b/src/assets/css/layouts/sections/_hero.scss
@@ -229,16 +229,22 @@
       gap: 12px;
       .swiper-button-next,
       .swiper-button-prev {
-        position: static;
-        margin-top: 32px;
+        position: relative;
+        left: unset;
+        right: unset;
+        top: unset;
+        margin-top: 24px;
         &,
         > img {
-          display: flex;
           width: 40px;
           height: 40px;
         }
+        > img {
+          display: flex;
+        }
 
         @include grid-mn('xmd') {
+          margin-top: 28px;
           width: 32px;
           height: 32px;
         }
